kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kibana-service
    labels:
        app: kibana
spec:
    ports:
        - name: http
          protocol: TCP
          port: 5601
          targetPort: 5601
    selector:
        app: kibana
